[project]
name = "accountant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.4", "typer"]

[project.scripts]
accountant = "accountant.main:app"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
accountant = { workspace = true }
